mobile overflow fix attempt

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -50,7 +50,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 15px 10px;
-    width: fit-content;
+    width: 100%;
     margin: 30px auto;
     position: absolute;
     left: 50%;
